description of the problem...

--- a/Project/Project_1_rocket.ipynb
+++ b/Project/Project_1_rocket.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 652,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,25 +24,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 653,
    "metadata": {},
    "outputs": [],
    "source": [
     "# environment parameters\n",
     "\n",
     "FRAME_TIME = 0.1  # time interval\n",
-    "GRAVITY_ACCEL = 0.09  # gravity constant\n",
+    "GRAVITY_ACCEL = 0.2  # gravity constant\n",
     "BOOST_ACCEL = 0.55  # thrust constant\n",
     "DRAG_COEFF = 0.25 # Drag coefficient\n",
     "S = 0.1 # Surface Area of rocket\n",
     "RHO = 0.1225 # Air Density at sea level\n",
-    "RADIUS = 0.5 # Test w/ unit radius of rotation first...\n",
-    "FPA_GAIN = 0.25"
+    "FPA_GAIN = 0.55"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 654,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,32 +60,23 @@
     "        \"\"\"\n",
     "        action[0]: thrust control\n",
     "        action[1]: fpa control\n",
-    "        state[0] = x_h\n",
-    "        state[1] = x_h_dot\n",
-    "        state[2] = x_v\n",
-    "        state[3] = x_v_dot\n",
-    "        state[4] = fpa\n",
-    "        state[5] = fpa_dot\n",
+    "        state[0] = x\n",
+    "        state[1] = x_dot\n",
+    "        state[2] = fpa\n",
+    "        state[3] = fpa_dot\n",
     "        ###\n",
-    "        fpa_dot(t+1) = fpa_dot(t) + action[1]*dt\n",
+    "        fpa_dot(t+1) = fpa_dot(t) + (gsin(fpa) - action[1])*dt\n",
     "        \"\"\"\n",
-    "        vertical_component_velocity = (-0.5*RHO*S*DRAG_COEFF*FRAME_TIME*(state.detach()[1]**2 + state.detach()[3]**2))*t.cos(state.detach()[4]) + (GRAVITY_ACCEL * FRAME_TIME)\n",
-    "        delta_state_vertical = t.tensor([0., 0., 0., vertical_component_velocity, 0., vertical_component_velocity/RADIUS])\n",
-    "        horizontal_component_velocity = ((0.5*RHO*S*DRAG_COEFF*FRAME_TIME*(state.detach()[1]**2 + state.detach()[3]**2))*t.sin(state.detach()[4]))\n",
-    "        delta_state_horizontal =  t.tensor([0., horizontal_component_velocity, 0., 0., 0., 0.])\n",
-    "        delta_state = BOOST_ACCEL * FRAME_TIME * t.tensor([0., -t.cos(state.detach()[4]), 0., -t.sin(state.detach()[4]), 0., (-t.sin(state.detach()[4]))/RADIUS]) * action[0]\n",
-    "        delta_state_fpa = t.tensor([0.,0.,0.,0.,0.,-1.])*FPA_GAIN*FRAME_TIME*action[1]\n",
-    "        step_mat = t.tensor([[1., FRAME_TIME, 0., 0., 0., 0.],\n",
-    "                             [0., 1., 0., 0., 0., 0.],\n",
-    "                             [0., 0., 1., FRAME_TIME, 0., 0.],\n",
-    "                             [0., 0., 0., 1., 0., 0.],\n",
-    "                             [0., 0., 0., 0., 1., FRAME_TIME],\n",
-    "                             [0., 0., 0., 0., 0., 1.]\n",
+    "        delta_x_dot = (t.tensor([0.,(GRAVITY_ACCEL*t.cos(state.detach()[2])) - (0.5*RHO*(state.detach()[1]**2)*S*DRAG_COEFF) - BOOST_ACCEL*action[0], 0., 0.])*FRAME_TIME) - (t.tensor([0., 1., 0., 0.])*BOOST_ACCEL*action[0]*FRAME_TIME)\n",
+    "        delta_fpa_dot = (t.tensor([0., 0., 0., (GRAVITY_ACCEL*t.sin(state.detach()[2]))])*FRAME_TIME) - (t.tensor([0., 0., 0., 1.])*FPA_GAIN*action[1]*FRAME_TIME)\n",
+    "        step_mat = t.tensor([[1., FRAME_TIME, 0., 0.],\n",
+    "                             [0., 1., 0., 0.,],\n",
+    "                             [0., 0., 1., FRAME_TIME],\n",
+    "                             [0., 0., 0., 1.]\n",
     "                            ])\n",
-    "\n",
     "        state = t.matmul(step_mat, state)\n",
-    "        state = state + delta_state_horizontal + delta_state_vertical + delta_state + delta_state_fpa\n",
-    "    \n",
+    "        state = state + delta_x_dot + delta_fpa_dot\n",
+    "\n",
     "\n",
     "        # delta_state_gravity = t.tensor([0., GRAVITY_ACCEL * FRAME_TIME]) \n",
     "        # delta_state_drag = t.tensor([0., -0.5*RHO*S*DRAG_COEFF*FRAME_TIME*(state.detach().clone()[1]**2)])\n",
@@ -102,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 655,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 656,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,17 +162,17 @@
     "\n",
     "    @staticmethod\n",
     "    def initialize_state():\n",
-    "        state = [0., 0., 1., 0., 0., 0.]  # TODO: need batch of initial states\n",
+    "        state = [1., 0., 1., 0.] # TODO: need batch of initial states\n",
     "        return t.tensor(state, requires_grad=False).float()\n",
     "\n",
     "    def error(self, state):\n",
-    "        return (0.05*state[0]**2) + state[1]**2 + state[2]**2 + state[3]**2 + state[4]**2 + state[5]**2\n",
+    "        return state[0]**2 + state[1]**2 + state[2]**2 + state[3]**2\n",
     "        # return state[0]**2 + state[1]**2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 657,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +188,7 @@
     "    def __init__(self, simulation):\n",
     "        self.simulation = simulation\n",
     "        self.parameters = simulation.controller.parameters()\n",
-    "        self.optimizer = optim.LBFGS(self.parameters, lr=0.01)\n",
+    "        self.optimizer = optim.LBFGS(self.parameters, lr=0.01, line_search_fn='strong_wolfe')\n",
     "        # self.scheduler = optim.lr_scheduler.StepLR(optimizer = self.optimizer, step_size = 10,gamma = 0.5)\n",
     "\n",
     "    def step(self):\n",
@@ -223,52 +213,61 @@
     "                print(\"Best loss:\", best_loss.data, \"Saving trajectory data...\")\n",
     "            if epoch%1 == 0: \n",
     "                print('[%d] loss: %.3f' % (epoch + 1, loss))\n",
-    "                if epoch == epochs -1:\n",
+    "                if epoch == epochs -1 or best_loss == 0.:\n",
     "                    self.visualize(best_state_trajectory, best_action_trajectory)\n",
     "                    print(\"Final state vector for the best trajectory: \", best_state_trajectory[99])\n",
+    "                    break\n",
     "\n",
     "    def visualize(self, state_trajectory = None, action_trajectory = None):\n",
     "        data = np.array([state_trajectory[i].detach().numpy() for i in range(self.simulation.T)])\n",
     "        action_data = np.array([action_trajectory[i].detach().numpy() for i in range(self.simulation.T)])\n",
-    "        x_h = data[:, 0]\n",
-    "        x_h_dot = data[:, 1]\n",
-    "        x_v = data[:, 2]\n",
-    "        x_v_dot = data[:, 3]\n",
-    "        fpa = data[:, 4]\n",
-    "        fpa_dot = data[:, 5]\n",
-    "        fig = plt.figure(figsize= (50, 50))\n",
-    "        plt.subplot(1,5,1)\n",
-    "        plt.plot(x_h, x_v)\n",
-    "        plt.xlabel('Horizontal displacement')\n",
-    "        plt.ylabel('Vertical displacement')\n",
-    "        plt.subplot(1,5,2)\n",
-    "        plt.plot(x_v_dot**2 + x_h_dot**2)\n",
+    "        x = data[:, 0]\n",
+    "        x_dot = data[:, 1]\n",
+    "        fpa = data[:, 2]\n",
+    "        fpa_dot = data[:, 3]\n",
+    "        plt.plot(x)\n",
+    "        plt.xlabel('Time_Steps')\n",
+    "        plt.ylabel('Distance')\n",
+    "        plt.show()\n",
+    "        plt.plot(x_dot)\n",
     "        plt.xlabel('Time_step')\n",
-    "        plt.ylabel('Velocity_magnitude')\n",
-    "        plt.subplot(1,5,3)\n",
+    "        plt.ylabel('Speed')\n",
+    "        plt.show()\n",
     "        plt.plot(fpa)\n",
     "        plt.xlabel('Time_step')\n",
     "        plt.ylabel('Flight Path Angle')\n",
-    "        plt.subplot(1,5,4)\n",
-    "        plt.plot(action_data[0])\n",
+    "        plt.show()\n",
+    "        plt.plot(fpa_dot)\n",
     "        plt.xlabel('Time_step')\n",
-    "        plt.ylabel('Thrust input')\n",
-    "        plt.subplot(1,5,5)\n",
-    "        plt.plot(action_data[1])\n",
-    "        plt.xlabel('Time_step')\n",
-    "        plt.ylabel('FPA input')\n"
+    "        plt.ylabel('Angular speed')\n",
+    "        plt.show()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 658,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "RuntimeError",
+     "evalue": "line search function is not supported yet",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-658-f11fc6f9838b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0ms\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mSimulation\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mc\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0md\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mT\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# define simulation\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0mo\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mOptimize\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ms\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# define optimizer\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m \u001b[0mo\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtrain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m100\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# solve the optimization problem\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-657-67942d05612f>\u001b[0m in \u001b[0;36mtrain\u001b[0;34m(self, epochs)\u001b[0m\n\u001b[1;32m     28\u001b[0m         \u001b[0mbest_loss\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m1e10\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     29\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mepoch\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mepochs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 30\u001b[0;31m             \u001b[0mloss\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     31\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mloss\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0mbest_loss\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     32\u001b[0m                 \u001b[0mbest_loss\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mloss\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-657-67942d05612f>\u001b[0m in \u001b[0;36mstep\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     21\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mparameters\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mloss\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 23\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0moptimizer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mclosure\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     24\u001b[0m         \u001b[0;31m# self.scheduler.step()\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     25\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mclosure\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/lib/python3.7/site-packages/torch/optim/lbfgs.py\u001b[0m in \u001b[0;36mstep\u001b[0;34m(self, closure)\u001b[0m\n\u001b[1;32m    203\u001b[0m             \u001b[0;34m(\u001b[0m\u001b[0mdefault\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;36m20\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    204\u001b[0m         \u001b[0mmax_eval\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mint\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mmaximal\u001b[0m \u001b[0mnumber\u001b[0m \u001b[0mof\u001b[0m \u001b[0mfunction\u001b[0m \u001b[0mevaluations\u001b[0m \u001b[0mper\u001b[0m \u001b[0moptimization\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 205\u001b[0;31m             \u001b[0mstep\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mdefault\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mmax_iter\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0;36m1.25\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    206\u001b[0m         \u001b[0mtolerance_grad\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mfloat\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mtermination\u001b[0m \u001b[0mtolerance\u001b[0m \u001b[0mon\u001b[0m \u001b[0mfirst\u001b[0m \u001b[0morder\u001b[0m \u001b[0moptimality\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    207\u001b[0m             \u001b[0;34m(\u001b[0m\u001b[0mdefault\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;36m1e-5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mRuntimeError\u001b[0m: line search function is not supported yet"
+     ]
+    }
+   ],
    "source": [
     "# Now it's time to run the code!\n",
     "\n",
     "T = 100  # number of time steps\n",
-    "dim_input = 6  # state space dimensions\n",
+    "dim_input = 4  # state space dimensions\n",
     "dim_hidden = 24  # latent dimensions\n",
     "dim_output = 2  # action space dimensions\n",
     "d = Dynamics()  # define dynamics\n",
@@ -276,6 +275,38 @@
     "s = Simulation(c, d, T)  # define simulation\n",
     "o = Optimize(s)  # define optimizer\n",
     "o.train(100)  # solve the optimization problem"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Description of the problem:** \\\n",
+    "The formulation of the rocket landing problem has been extended to include a flight path angle controller and aerodynamic drag. \\\n",
+    "To test the controller in a range of situations, a batch of initial states were sampled from a normal distribution:\n",
+    "$$\n",
+    "x_{ij} \\sim N(\\mu_j, \\sigma_j), i = 1, ... ,N \\space j = 1, ... , M \n",
+    "$$\n",
+    "In this case, we have N = 5 batches and M = 4 states. \\\n",
+    "Each of the states are updated according to the forces external to the rocket and the forces exerted by the control input. The state variable formulation for this problem is as follows:\n",
+    "$$\n",
+    "x(t+1) = x(t) + \\dot x(t)dt \\\\\n",
+    "\\dot x(t+1) = \\dot x(t) + \\ddot x(t)dt \\\\\n",
+    "\\nu(t+1) = x(t) + \\dot \\nu(t)dt \\\\\n",
+    "\\dot \\nu(t+1) = \\dot \\nu(t) + \\ddot \\nu(t)dt \\\\\n",
+    "$$\n",
+    "<center>\n",
+    "\n",
+    "![Force diagram](FBD.png)\n",
+    "\n",
+    "</center>\n",
+    "The update for the velocity and flight path angle are given as follows, assuming a constant mass system:\n",
+    "\n",
+    "$$\n",
+    "d\\dot x = (gcos(\\nu) - a_{drag} - a_{thrust})dt \\\\\n",
+    "d\\dot \\nu = (gsin(\\nu) - a_{cSurf})dt\n",
+    "$$\n",
+    "$ a_{cSurf} $ is the acceleration produced by the control input for changing the flight path angle. The "
    ]
   }
  ],
