--- a/Homework/Homework 4.ipynb
+++ b/Homework/Homework 4.ipynb
@@ -38,7 +38,7 @@
     "\n",
     "$$\n",
     "\\begin{aligned}\n",
-    "\\min_{x_1,x_2,x_3} & \\quad  f=x_1x_2+x_2x_3+x_1x_3\\\\\n",
+    "\\max_{x_1,x_2,x_3} & \\quad  f=x_1x_2+x_2x_3+x_1x_3\\\\\n",
     "{\\text{subject to }} & \\quad h=x_1+x_2+x_3-3=0.\n",
     "\\end{aligned}\n",
     "$$ \n",
@@ -51,7 +51,7 @@
     "\n",
     "$$\n",
     "\\begin{aligned}\n",
-    "\\min_{x_1,x_2} & \\quad  f=2x_{1} + bx_2\\\\\n",
+    "\\max_{x_1,x_2} & \\quad  f=2x_{1} + bx_2\\\\\n",
     "{\\text{subject to }} & \\quad g_1 = x_{1}^{2}+ x_{2}^{2}-5\\leq 0\\\\\n",
     "& \\quad g_2= x_1- x_2-2\\leq 0.\n",
     "\\end{aligned}\n",
@@ -90,6 +90,15 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.3"
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "source": [],
+    "metadata": {
+     "collapsed": false
+    }
+   }
   }
  },
  "nbformat": 4,
