--- a/Homework/Homework 4.ipynb
+++ b/Homework/Homework 4.ipynb
@@ -71,6 +71,65 @@
     "\n",
     "by implementing the generalized reduced gradient algorithm."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "743e51a8",
+   "metadata": {},
+   "source": [
+    "## Problem 1\n",
+    "\n",
+    "A graphical sketch of the problem is shown below.\n",
+    "The optimum is at (0,1)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2475edc7",
+   "metadata": {},
+   "source": [
+    "![HW4P1sketch](img/HW4P1sketch.jpg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "27502beb",
+   "metadata": {},
+   "source": [
+    "Then using KKT conditions, it can be stated that:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "60a7a1d6",
+   "metadata": {},
+   "source": [
+    "![HW4P1a](img/HW4P1a.jpg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b0809d07",
+   "metadata": {},
+   "source": [
+    "Simplifying:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "548822b0",
+   "metadata": {},
+   "source": [
+    "![HW4P1b](img/HW4P1b.jpg)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "400d3877",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -89,15 +148,15 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.8"
   },
   "pycharm": {
    "stem_cell": {
     "cell_type": "raw",
-    "source": [],
     "metadata": {
      "collapsed": false
-    }
+    },
+    "source": []
    }
   }
  },
