--- a/Homework/Homework 4.ipynb
+++ b/Homework/Homework 4.ipynb
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "743e51a8",
+   "id": "c6e46014",
    "metadata": {},
    "source": [
     "## Problem 1\n",
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2475edc7",
+   "id": "8f151379",
    "metadata": {},
    "source": [
     "![HW4P1sketch](img/HW4P1sketch.jpg)"
@@ -93,7 +93,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "27502beb",
+   "id": "ec9c5e12",
+   "metadata": {},
+   "source": [
+    "![HW4P1c](img/HW4P1c.jpg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6c4d6d29",
    "metadata": {},
    "source": [
     "Then using KKT conditions, it can be stated that:"
@@ -101,7 +109,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "60a7a1d6",
+   "id": "151bb911",
    "metadata": {},
    "source": [
     "![HW4P1a](img/HW4P1a.jpg)"
@@ -109,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b0809d07",
+   "id": "1f518b03",
    "metadata": {},
    "source": [
     "Simplifying:"
@@ -117,16 +125,50 @@
   },
   {
    "cell_type": "markdown",
-   "id": "548822b0",
+   "id": "9df8cfab",
    "metadata": {},
    "source": [
-    "![HW4P1b](img/HW4P1b.jpg)"
+    "![HW4P1bb](img/HW4P1bb.jpg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "53b59bbf",
+   "metadata": {},
+   "source": [
+    "## Problem 2\n",
+    "\n",
+    "The graphical solution is shown below."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "38dfebad",
+   "metadata": {},
+   "source": [
+    "![HW4P2sketch](img/HW4P2sketch.jpg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "881e0312",
+   "metadata": {},
+   "source": [
+    "![HW4P2a](img/HW4P2a.jpg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d3caa25a",
+   "metadata": {},
+   "source": [
+    "The requirement for the gradient to be 0 was not satisfied. This suggests that the optimum is an irregular point since the gradients for the inequality contraints are linearly dependent at that point."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "400d3877",
+   "id": "864d0176",
    "metadata": {},
    "outputs": [],
    "source": []
