--- a/Homework/Homework 4.ipynb
+++ b/Homework/Homework 4.ipynb
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c6e46014",
+   "id": "a840c427",
    "metadata": {},
    "source": [
     "## Problem 1\n",
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8f151379",
+   "id": "0207e934",
    "metadata": {},
    "source": [
     "![HW4P1sketch](img/HW4P1sketch.jpg)"
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ec9c5e12",
+   "id": "6894f669",
    "metadata": {},
    "source": [
     "![HW4P1c](img/HW4P1c.jpg)"
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6c4d6d29",
+   "id": "d4d1ddb7",
    "metadata": {},
    "source": [
     "Then using KKT conditions, it can be stated that:"
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "151bb911",
+   "id": "5e39d216",
    "metadata": {},
    "source": [
     "![HW4P1a](img/HW4P1a.jpg)"
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1f518b03",
+   "id": "35509fbb",
    "metadata": {},
    "source": [
     "Simplifying:"
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9df8cfab",
+   "id": "f0d95d17",
    "metadata": {},
    "source": [
     "![HW4P1bb](img/HW4P1bb.jpg)"
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "53b59bbf",
+   "id": "845ca238",
    "metadata": {},
    "source": [
     "## Problem 2\n",
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "38dfebad",
+   "id": "f21aade3",
    "metadata": {},
    "source": [
     "![HW4P2sketch](img/HW4P2sketch.jpg)"
@@ -151,7 +151,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "881e0312",
+   "id": "ac9e2d84",
+   "metadata": {},
+   "source": [
+    "Applying optimality conditions:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "373c671b",
    "metadata": {},
    "source": [
     "![HW4P2a](img/HW4P2a.jpg)"
@@ -159,16 +167,76 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d3caa25a",
+   "id": "2f86c445",
    "metadata": {},
    "source": [
     "The requirement for the gradient to be 0 was not satisfied. This suggests that the optimum is an irregular point since the gradients for the inequality contraints are linearly dependent at that point."
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4880da6a",
+   "metadata": {},
+   "source": [
+    "## Problem 3\n",
+    "\n",
+    "Reduced Gradient Method\n",
+    "\n",
+    "Assume the following:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e4f93af4",
+   "metadata": {},
+   "source": [
+    "![HW4P3a](img/HW4P3a.jpg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bb3def9c",
+   "metadata": {},
+   "source": [
+    "![HW4P3b](img/HW4P3b.jpg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ea7f3737",
+   "metadata": {},
+   "source": [
+    "Simplify."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b4c2e6f3",
+   "metadata": {},
+   "source": [
+    "![HW4P3c](img/HW4P3c.jpg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "59b2b9b8",
+   "metadata": {},
+   "source": [
+    "Using L"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0fdac082",
+   "metadata": {},
+   "source": [
+    "![HW4P3d](img/HW4P3d.jpg)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "864d0176",
+   "id": "3a67dc5a",
    "metadata": {},
    "outputs": [],
    "source": []
