--- a/Homework/Homework 4.ipynb
+++ b/Homework/Homework 4.ipynb
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a840c427",
+   "id": "9aba669d",
    "metadata": {},
    "source": [
     "## Problem 1\n",
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0207e934",
+   "id": "53173155",
    "metadata": {},
    "source": [
     "![HW4P1sketch](img/HW4P1sketch.jpg)"
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6894f669",
+   "id": "b32caacc",
    "metadata": {},
    "source": [
     "![HW4P1c](img/HW4P1c.jpg)"
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d4d1ddb7",
+   "id": "7ab1d39a",
    "metadata": {},
    "source": [
     "Then using KKT conditions, it can be stated that:"
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5e39d216",
+   "id": "87d71a98",
    "metadata": {},
    "source": [
     "![HW4P1a](img/HW4P1a.jpg)"
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "35509fbb",
+   "id": "3fb511f3",
    "metadata": {},
    "source": [
     "Simplifying:"
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f0d95d17",
+   "id": "40dd1f0b",
    "metadata": {},
    "source": [
     "![HW4P1bb](img/HW4P1bb.jpg)"
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "845ca238",
+   "id": "e45b6e8a",
    "metadata": {},
    "source": [
     "## Problem 2\n",
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f21aade3",
+   "id": "12285f03",
    "metadata": {},
    "source": [
     "![HW4P2sketch](img/HW4P2sketch.jpg)"
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ac9e2d84",
+   "id": "be5b66e5",
    "metadata": {},
    "source": [
     "Applying optimality conditions:"
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "373c671b",
+   "id": "d9c42be0",
    "metadata": {},
    "source": [
     "![HW4P2a](img/HW4P2a.jpg)"
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2f86c445",
+   "id": "d1436d8e",
    "metadata": {},
    "source": [
     "The requirement for the gradient to be 0 was not satisfied. This suggests that the optimum is an irregular point since the gradients for the inequality contraints are linearly dependent at that point."
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4880da6a",
+   "id": "75ac0ae1",
    "metadata": {},
    "source": [
     "## Problem 3\n",
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e4f93af4",
+   "id": "99a688e8",
    "metadata": {},
    "source": [
     "![HW4P3a](img/HW4P3a.jpg)"
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bb3def9c",
+   "id": "d9317f23",
    "metadata": {},
    "source": [
     "![HW4P3b](img/HW4P3b.jpg)"
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ea7f3737",
+   "id": "e94a1ebf",
    "metadata": {},
    "source": [
     "Simplify."
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b4c2e6f3",
+   "id": "64b0c377",
    "metadata": {},
    "source": [
     "![HW4P3c](img/HW4P3c.jpg)"
@@ -219,24 +219,88 @@
   },
   {
    "cell_type": "markdown",
-   "id": "59b2b9b8",
+   "id": "fa119b67",
    "metadata": {},
    "source": [
-    "Using L"
+    "Lagrange Multipliers Method"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "0fdac082",
+   "id": "cb4f79c6",
    "metadata": {},
    "source": [
     "![HW4P3d](img/HW4P3d.jpg)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "16463fbe",
+   "metadata": {},
+   "source": [
+    "## Problem 4\n",
+    "\n",
+    "Lagrangian function:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3def12d0",
+   "metadata": {},
+   "source": [
+    "![HW4P4d](img/HW4P4cdjpg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4f86bb41",
+   "metadata": {},
+   "source": [
+    "Calculate b:"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "93945a26",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f90cfce1",
+   "metadata": {},
+   "source": [
+    "![HW4P4a](img/HW4P4a.jpg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8e15f1bf",
+   "metadata": {},
+   "source": [
+    "![HW4P4b](img/HW4P4b.jpg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aaa2923e",
+   "metadata": {},
+   "source": [
+    "![HW4P4c](img/HW4P4c.jpg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "750dd3bb",
+   "metadata": {},
+   "source": [
+    "Maximum point is at b=4."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3a67dc5a",
+   "id": "d303aaa6",
    "metadata": {},
    "outputs": [],
    "source": []
