--- a/Homework/Homework 4.ipynb
+++ b/Homework/Homework 4.ipynb
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9aba669d",
+   "id": "3030db05",
    "metadata": {},
    "source": [
     "## Problem 1\n",
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "53173155",
+   "id": "714b897d",
    "metadata": {},
    "source": [
     "![HW4P1sketch](img/HW4P1sketch.jpg)"
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b32caacc",
+   "id": "6b8307bc",
    "metadata": {},
    "source": [
     "![HW4P1c](img/HW4P1c.jpg)"
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7ab1d39a",
+   "id": "9bb6c45a",
    "metadata": {},
    "source": [
     "Then using KKT conditions, it can be stated that:"
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "87d71a98",
+   "id": "2cf030a7",
    "metadata": {},
    "source": [
     "![HW4P1a](img/HW4P1a.jpg)"
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3fb511f3",
+   "id": "c45a1569",
    "metadata": {},
    "source": [
     "Simplifying:"
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "40dd1f0b",
+   "id": "dcb5cba0",
    "metadata": {},
    "source": [
     "![HW4P1bb](img/HW4P1bb.jpg)"
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e45b6e8a",
+   "id": "039d2a66",
    "metadata": {},
    "source": [
     "## Problem 2\n",
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "12285f03",
+   "id": "3749be45",
    "metadata": {},
    "source": [
     "![HW4P2sketch](img/HW4P2sketch.jpg)"
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "be5b66e5",
+   "id": "cbb8a9aa",
    "metadata": {},
    "source": [
     "Applying optimality conditions:"
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d9c42be0",
+   "id": "97faa641",
    "metadata": {},
    "source": [
     "![HW4P2a](img/HW4P2a.jpg)"
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d1436d8e",
+   "id": "20a87ed6",
    "metadata": {},
    "source": [
     "The requirement for the gradient to be 0 was not satisfied. This suggests that the optimum is an irregular point since the gradients for the inequality contraints are linearly dependent at that point."
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "75ac0ae1",
+   "id": "896b7a6d",
    "metadata": {},
    "source": [
     "## Problem 3\n",
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "99a688e8",
+   "id": "91bce747",
    "metadata": {},
    "source": [
     "![HW4P3a](img/HW4P3a.jpg)"
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d9317f23",
+   "id": "15d56a46",
    "metadata": {},
    "source": [
     "![HW4P3b](img/HW4P3b.jpg)"
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e94a1ebf",
+   "id": "beaf6854",
    "metadata": {},
    "source": [
     "Simplify."
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "64b0c377",
+   "id": "ef51b541",
    "metadata": {},
    "source": [
     "![HW4P3c](img/HW4P3c.jpg)"
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fa119b67",
+   "id": "9c7075d3",
    "metadata": {},
    "source": [
     "Lagrange Multipliers Method"
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cb4f79c6",
+   "id": "f6436f26",
    "metadata": {},
    "source": [
     "![HW4P3d](img/HW4P3d.jpg)"
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "16463fbe",
+   "id": "21197b7a",
    "metadata": {},
    "source": [
     "## Problem 4\n",
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3def12d0",
+   "id": "57fdf473",
    "metadata": {},
    "source": [
     "![HW4P4d](img/HW4P4cdjpg)"
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4f86bb41",
+   "id": "1ec5affa",
    "metadata": {},
    "source": [
     "Calculate b:"
@@ -261,13 +261,13 @@
   },
   {
    "cell_type": "raw",
-   "id": "93945a26",
+   "id": "9cb3e9cf",
    "metadata": {},
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "f90cfce1",
+   "id": "c2feebe3",
    "metadata": {},
    "source": [
     "![HW4P4a](img/HW4P4a.jpg)"
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8e15f1bf",
+   "id": "149c6f95",
    "metadata": {},
    "source": [
     "![HW4P4b](img/HW4P4b.jpg)"
@@ -283,7 +283,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aaa2923e",
+   "id": "0d9cbbe7",
+   "metadata": {},
+   "source": [
+    "Simplify."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0a9b217e",
    "metadata": {},
    "source": [
     "![HW4P4c](img/HW4P4c.jpg)"
@@ -291,7 +299,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "750dd3bb",
+   "id": "a9e28ed3",
    "metadata": {},
    "source": [
     "Maximum point is at b=4."
@@ -300,7 +308,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d303aaa6",
+   "id": "81a90838",
    "metadata": {},
    "outputs": [],
    "source": []
