--- a/Homework/Homework 4.ipynb
+++ b/Homework/Homework 4.ipynb
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3030db05",
+   "id": "8fd0ba95",
    "metadata": {},
    "source": [
     "## Problem 1\n",
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "714b897d",
+   "id": "772ecf76",
    "metadata": {},
    "source": [
     "![HW4P1sketch](img/HW4P1sketch.jpg)"
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6b8307bc",
+   "id": "108baa91",
    "metadata": {},
    "source": [
     "![HW4P1c](img/HW4P1c.jpg)"
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9bb6c45a",
+   "id": "ab9388c9",
    "metadata": {},
    "source": [
     "Then using KKT conditions, it can be stated that:"
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2cf030a7",
+   "id": "9dafb2fb",
    "metadata": {},
    "source": [
     "![HW4P1a](img/HW4P1a.jpg)"
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c45a1569",
+   "id": "d88bca95",
    "metadata": {},
    "source": [
     "Simplifying:"
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dcb5cba0",
+   "id": "ceffa5a7",
    "metadata": {},
    "source": [
     "![HW4P1bb](img/HW4P1bb.jpg)"
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "039d2a66",
+   "id": "e29385cd",
    "metadata": {},
    "source": [
     "## Problem 2\n",
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3749be45",
+   "id": "278adf85",
    "metadata": {},
    "source": [
     "![HW4P2sketch](img/HW4P2sketch.jpg)"
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cbb8a9aa",
+   "id": "3d62fd1a",
    "metadata": {},
    "source": [
     "Applying optimality conditions:"
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "97faa641",
+   "id": "0111f1da",
    "metadata": {},
    "source": [
     "![HW4P2a](img/HW4P2a.jpg)"
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20a87ed6",
+   "id": "9f8579b5",
    "metadata": {},
    "source": [
     "The requirement for the gradient to be 0 was not satisfied. This suggests that the optimum is an irregular point since the gradients for the inequality contraints are linearly dependent at that point."
@@ -175,19 +175,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "896b7a6d",
+   "id": "0895be45",
    "metadata": {},
    "source": [
     "## Problem 3\n",
     "\n",
-    "Reduced Gradient Method\n",
+    "#### Reduced Gradient Method\n",
     "\n",
     "Assume the following:"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "91bce747",
+   "id": "e657b91a",
    "metadata": {},
    "source": [
     "![HW4P3a](img/HW4P3a.jpg)"
@@ -195,7 +195,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "15d56a46",
+   "id": "8b22aa24",
+   "metadata": {},
+   "source": [
+    "Simplify and solve."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "afc37ad9",
    "metadata": {},
    "source": [
     "![HW4P3b](img/HW4P3b.jpg)"
@@ -203,15 +211,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "beaf6854",
+   "id": "fda5d70f",
    "metadata": {},
    "source": [
-    "Simplify."
+    "#### Lagrange Multipliers Method\n",
+    "\n",
+    "Assume the same conditions as above.\n",
+    "Simplify and solve."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "ef51b541",
+   "id": "b13cb942",
    "metadata": {},
    "source": [
     "![HW4P3c](img/HW4P3c.jpg)"
@@ -219,55 +230,41 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c7075d3",
+   "id": "1d1b9bbd",
    "metadata": {},
    "source": [
-    "Lagrange Multipliers Method"
+    "The optimum point is $x_1 = x_2 = x_3 = 1$. To determine if the solution is a local minimum or local maximum, the second derivative of the Lagrangian function can be computed to find the eigenvalues."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "f6436f26",
+   "id": "a0b69d29",
    "metadata": {},
    "source": [
-    "![HW4P3d](img/HW4P3d.jpg)"
+    "![HW4P3dd](img/HW4P3dd.jpg)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "21197b7a",
+   "id": "73bfd384",
+   "metadata": {},
+   "source": [
+    "The eigenvalues are greater than or equal to 0. This means that the second derivative is positive semi-definite, and the solution fulfills the requirements to be a valid local minimum."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8a9c0304",
    "metadata": {},
    "source": [
     "## Problem 4\n",
     "\n",
-    "Lagrangian function:"
+    "#### Reduced Gradient Method"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "57fdf473",
-   "metadata": {},
-   "source": [
-    "![HW4P4d](img/HW4P4cdjpg)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "1ec5affa",
-   "metadata": {},
-   "source": [
-    "Calculate b:"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "id": "9cb3e9cf",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c2feebe3",
+   "id": "0bbb1545",
    "metadata": {},
    "source": [
     "![HW4P4a](img/HW4P4a.jpg)"
@@ -275,7 +272,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "149c6f95",
+   "id": "a6d91bfe",
    "metadata": {},
    "source": [
     "![HW4P4b](img/HW4P4b.jpg)"
@@ -283,7 +280,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0d9cbbe7",
+   "id": "4fad0c3b",
    "metadata": {},
    "source": [
     "Simplify."
@@ -291,7 +288,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0a9b217e",
+   "id": "64afc49a",
    "metadata": {},
    "source": [
     "![HW4P4c](img/HW4P4c.jpg)"
@@ -299,16 +296,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a9e28ed3",
+   "id": "2bd9089f",
    "metadata": {},
    "source": [
-    "Maximum point is at b=4."
+    "Maximum point is at b = 4."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "81a90838",
+   "id": "a9928885",
    "metadata": {},
    "outputs": [],
    "source": []
